--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'DynaPuff', cursive;
+}
+
 body {
+  min-height: 100vh;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -8,4 +15,6 @@ body {
   background-color: #242424;
   padding: 0px;
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
