--- a/src/pages/MainSearch.css
+++ b/src/pages/MainSearch.css
@@ -1,7 +1,23 @@
 .MainSearch {
-    margin: 0;
-    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+}
+
+.MainContent {
+    margin: 6px 0px 6px;
     width: 100%;
-    height: 100%;
-    background-color: red;
+    height: calc(100vh - 112px);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media (max-width: 767px) {
+    
+        .MainContent {
+            height: calc(100vh - 156px);
+            width: calc(100vw - 12px);
+            flex-flow: column;
+            margin: 6px 6px 0px;
+        }
 }
