--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     background-color: #313131;
-    width: 100%;
     height: 100px;
     display: flex;
     flex-wrap: wrap;
@@ -41,6 +40,7 @@
     border-radius: 6px;
     margin: 0px 10px 0px;
     min-width: 300px;
+    max-width: 600px;
     background-color: #e3e3e3;
 }
 
