--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,26 @@
   font-family: 'DynaPuff', cursive;
 }
 
-body {
-  min-height: 100vh;
-  width: 100%;
-  padding: 0;
+:root {
+  height: 50rem;
+  background-color: #002bb9;
+  padding: 0px;
   margin: 0;
 }
 
-:root {
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
   background-color: #242424;
-  padding: 0px;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(202, 202, 202);
 }
