--- a/src/components/PokeInfos/PokeInfos.css
+++ b/src/components/PokeInfos/PokeInfos.css
@@ -4,6 +4,33 @@
     flex: 2.5 0;
     background-color: #d30a40;
     height: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.PokeDescription {
+    border-radius: 10px;
+    flex: 0.5 0;
+    width: 85%;
+    background-color: rgba(240, 128, 128, 0.486);
+    margin: 25px;
+    padding: 1em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: column;
+}
+
+.PokeMovesDiv {
+    margin-bottom: 25px;
+    border-radius: 10px;
+    background-color: blue;
+    width: 85%;
+    flex:3 0;
+    padding: 1em;
 }
 
 @media (max-width: 767px) {
@@ -12,5 +39,6 @@
             border-radius: 15px;
             flex: 1 0;
             width: 100%;
+            
         }
 }
