--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -80,6 +80,14 @@
     color: #e3e3e3;
 }
 
+.dropDown {
+    position: absolute;
+    display: flex;
+    flex-flow: column;
+    background-color: white;
+    font-size: 14px;
+}
+
 /* Responsividade Mobile */
 
 @media (max-width: 767px) {
