--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -86,6 +86,11 @@
     flex-flow: column;
     background-color: white;
     font-size: 14px;
+    text-transform: capitalize;
+}
+
+.PokeSuggestion {
+    padding: 0.3em;
 }
 
 /* Responsividade Mobile */
