--- a/src/components/PokeInfos/PokeInfos.css
+++ b/src/components/PokeInfos/PokeInfos.css
@@ -8,7 +8,8 @@
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
-    
+    text-transform: capitalize;
+    padding:0
 }
 
 .PokeDescription {
@@ -28,10 +29,31 @@
     margin-bottom: 25px;
     border-radius: 10px;
     background-color: blue;
-    width: 85%;
-    flex:3 0;
-    padding: 1em;
+    width: 90%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    overflow-y: scroll;
+    height: 700px;
 }
+
+.PokeMovesDiv p {
+    color: white;
+}
+
+.moveDiv {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background-color: #3a0d19;
+    margin: 0px 3px;
+
+}
+
+
 
 @media (max-width: 767px) {
     .PokeInfos {
